# TimeSeriesDatabaseEngine

./: .gitignore  CMakeLists.txt  README.md
src/: client.c  head.c  head.h  main.c  parsor.c  parsor.h  registry.c  registry.h  request.c  request.h  server.c  server.h
tests/: test_server_sc.c
